Cambio el nombre del proyecto en package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap",
+  "name": "bootstrapcoursera",
   "version": "1.0.0",
   "description": "Proyecto en NodeJS",
   "main": "index.html",
