--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run watch:scss\" \"npm run dev\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "sass styles/styles.scss styles/estilos.css ",
+    "watch:scss": "onchange \"styles/*.scss\" -- npm run scss",
+    "clean": "rimraf dist",
+    "imgmin": "imagemin images/* --out-dir dist/images",
+    "usemin": "usemin about.html -d dist  -o dist/about.html --htmlmin true && usemin contact.html -d dist  -o dist/contact.html --htmlmin true &&  usemin index.html -d dist  -o dist/index.html --htmlmin true  &&   usemin prices.html -d dist  -o dist/prices.html --htmlmin true ",
+    "build":"npm run clean && npm run scss && npm run imgmin && npm run usemin"
   },
   "repository": {
     "type": "git",
@@ -18,12 +25,21 @@
   },
   "homepage": "https://github.com/FernandoRub13/Bootstrap-4#readme",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "cssmin": "^0.4.3",
+    "htmlmin": "0.0.7",
+    "install": "^0.13.0",
     "lite-server": "^2.6.1",
-    "sass": "^1.36.0"
+    "onchange": "^7.1.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.36.0",
+    "uglify-js": "^3.14.1",
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.0.2"
+    "bootstrap": "^5.0.2",
+    "concurrently": "^6.2.0"
   }
 }
