--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "imgmin": "imagemin images/* --out-dir dist/images",
     "usemin": "usemin about.html -d dist  -o dist/about.html --htmlmin true && usemin contact.html -d dist  -o dist/contact.html --htmlmin true &&  usemin index.html -d dist  -o dist/index.html --htmlmin true  &&   usemin prices.html -d dist  -o dist/prices.html --htmlmin true ",
-    "build":"npm run clean && npm run scss && npm run imgmin && npm run usemin"
+    "build": "npm run clean && npm run scss && npm run imgmin && npm run usemin"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,27 @@
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "cssmin": "^0.4.3",
+    "grunt": "^1.4.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-usemin": "^3.1.1",
     "htmlmin": "0.0.7",
     "install": "^0.13.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.6.1",
     "onchange": "^7.1.0",
     "rimraf": "^3.0.2",
     "sass": "^1.36.0",
+    "time-grunt": "^2.0.0",
     "uglify-js": "^3.14.1",
     "usemin-cli": "^0.6.0"
   },
